# rag_web

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
app/: build_index.py  cli.py  main.py
app/rag/: chain.py  loader.py  memory.py  prompt.py  splitter.py  vectorstore.py
data/: career_goals.txt  deployment.txt  exoplanet_project.txt  fraud_project.txt  profile.txt  project_overview.txt  skills.txt  website.txt
data/chroma_langchain_db/: chroma.sqlite3
